# ly-translate

./: .dockerignore  .gitignore  Dockerfile.windows  build-win.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  dict.rs  main.rs  translate_mod.rs  tray.rs
src/components/: LanguageBar.vue  SettingsDialog.vue  TranslatePanel.vue  WordTooltip.vue
src/composables/: detectLang.ts  useTranslation.ts  useWordLookup.ts
src/stores/: settings.ts
src/styles/: main.css
src/types/: index.ts
